--- a/site/styles.css
+++ b/site/styles.css
@@ -2,3 +2,24 @@
   text-align: center;
   padding: 10px;
 }
+
+.row {
+  
+}
+
+.color {
+  background-color: gray;
+}
+
+.t-color-1 {
+  background-color: pink;
+}
+
+.t-color-2 {
+  color: white
+  background-color: red;
+}
+
+.t-color-2 {
+  background-color: yellow;
+}
