--- a/site/styles.css
+++ b/site/styles.css
@@ -4,11 +4,12 @@
 }
 
 .row {
-  
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 p {
-  padding: 10px;
+  padding: 15px;
 }
 
 #color {
@@ -20,10 +21,10 @@ p {
 }
 
 #t-color-2 {
-  color: white
+  color: white;
   background-color: red;
 }
 
-#t-color-2 {
+#t-color-3 {
   background-color: yellow;
 }
