--- a/site/styles.css
+++ b/site/styles.css
@@ -41,14 +41,14 @@ p {
 }
 
 #t-color-1 {
-  padding: 8px,20px,8px,20px;
+  margin: 8px,20px,8px,20px;
 }
 
 #t-color-2 {
   color: white;
-  padding: 8px,20px,8px,20px;
+  margin: 8px,20px,8px,20px;
 }
 
 #t-color-3 {
-  padding: 8px,20px,8px,20px;
+  margin: 8px,20px,8px,20px;
 }
