--- a/site/styles.css
+++ b/site/styles.css
@@ -1,54 +1,164 @@
-#main_title {
-  text-align: center;
-  padding: 10px;
+* {
+	box-sizing: border-box;
+	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
-
+h1 {
+	text-align: center;
+}
 .row {
-  padding-left: 30px;
-  padding-right: 30px;
+	width: 100%;
 }
-
-.left {
-  padding: 20px;
+.section-1, .section-2, .section-3 {
+	width: 400px;
+	height: 200px;
+	float: left;
+	background-color: gray;
+	border: 1px solid black;
+	margin: 25px;
 }
-
-.middle {
-  padding: 20px;
+div .heading-1, .heading-2, .heading-3 {
+	float: right;
+	width: 70px;
+	height: 35px;
+	border: 1px solid black;
 }
-
-.right {
-  padding: 20px;
-}
-
 p {
-  padding: 15px;
+	clear: right;
+	padding: 10px;
+}
+.heading-1 {
+	background-color: red;
+	padding: 5px;
+}
+.heading-2 {
+	background-color: green;
+	padding: 7px;
+}
+.heading-3 {
+	background-color: blue;
+	padding: 7px;
 }
 
-#color {
-  background-color: gray;
+@media (min-width:992) {
+	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+		border: 1px solid black;
+	}
+	.col-lg-1 {
+		width: 8.33%;
+	}
+	.col-lg-2 {
+		width: 16.66%;
+	}
+	.col-lg-3 {
+		width: 25%;
+	}
+	.col-lg-4 {
+		width: 33%%;
+	}
+	.col-lg-5 {
+		width: 41.66%;
+	}
+	.col-lg-6 {
+		width: 50%;
+	}
+	.col-lg-7 {
+		width: 58.33%;
+	}
+	.col-lg-8 {
+		width: 66.66%;
+	}
+	.col-lg-9 {
+		width: 74.99%;
+	}
+	.col-lg-10 {
+		width: 83.33%;
+	}
+	.col-lg-11 {
+		width: 91.66%;
+	}
+	.col-lg-12 {
+		width: 100%;
+	}
 }
-
-.title-left {
-  background-color: pink;
+@media (min-width: 768) and (max-width: 991) {
+	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+		border: 1px solid black;
+	}
+	.col-md-1 {
+		width: 8.33%;
+	}
+	.col-md-2 {
+		width: 16.66%;
+	}
+	.col-md-3 {
+		width: 25%;
+	}
+	.col-md-4 {
+		width: 33%%;
+	}
+	.col-md-5 {
+		width: 41.66%;
+	}
+	.col-md-6 {
+		width: 50%;
+	}
+	.col-md-7 {
+		width: 58.33%;
+	}
+	.col-md-8 {
+		width: 66.66%;
+	}
+	.col-md-9 {
+		width: 74.99%;
+	}
+	.col-md-10 {
+		width: 83.33%;
+	}
+	.col-md-11 {
+		width: 91.66%;
+	}
+	.col-md-12 {
+		width: 100%;
+	}
 }
-
-.title-middle {
-  background-color: red;
-}
-
-.title-right {
-  background-color: yellow;
-}
-
-#t-color-1 {
-  margin: 8px,20px,8px,20px;
-}
-
-#t-color-2 {
-  color: white;
-  margin: 8px,20px,8px,20px;
-}
-
-#t-color-3 {
-  margin: 8px,20px,8px,20px;
+@media (max-width: 767) {
+	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+		border: 1px solid black;
+	}
+	.col-sm-1 {
+		width: 8.33%;
+	}
+	.col-sm-2 {
+		width: 16.66%;
+	}
+	.col-sm-3 {
+		width: 25%;
+	}
+	.col-sm-4 {
+		width: 33%%;
+	}
+	.col-sm-5 {
+		width: 41.66%;
+	}
+	.col-sm-6 {
+		width: 50%;
+	}
+	.col-sm-7 {
+		width: 58.33%;
+	}
+	.col-sm-8 {
+		width: 66.66%;
+	}
+	.col-sm-9 {
+		width: 74.99%;
+	}
+	.col-sm-10 {
+		width: 83.33%;
+	}
+	.col-sm-11 {
+		width: 91.66%;
+	}
+	.col-sm-12 {
+		width: 100%;
+	}
 }
