--- a/site/styles.css
+++ b/site/styles.css
@@ -1,164 +1,96 @@
 * {
-	box-sizing: border-box;
-	font-family: "Comic Sans MS", "Comic Sans", cursive;
-}
-h1 {
-	text-align: center;
-}
-.row {
-	width: 100%;
-}
-.section-1, .section-2, .section-3 {
-	width: 400px;
-	height: 200px;
-	float: left;
-	background-color: gray;
-	border: 1px solid black;
-	margin: 25px;
-}
-div .heading-1, .heading-2, .heading-3 {
-	float: right;
-	width: 70px;
-	height: 35px;
-	border: 1px solid black;
-}
-p {
-	clear: right;
-	padding: 10px;
-}
-.heading-1 {
-	background-color: red;
-	padding: 5px;
-}
-.heading-2 {
-	background-color: green;
-	padding: 7px;
-}
-.heading-3 {
-	background-color: blue;
-	padding: 7px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-@media (min-width:992) {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-		border: 1px solid black;
-	}
-	.col-lg-1 {
-		width: 8.33%;
-	}
-	.col-lg-2 {
-		width: 16.66%;
-	}
-	.col-lg-3 {
-		width: 25%;
-	}
-	.col-lg-4 {
-		width: 33%%;
-	}
-	.col-lg-5 {
-		width: 41.66%;
-	}
-	.col-lg-6 {
-		width: 50%;
-	}
-	.col-lg-7 {
-		width: 58.33%;
-	}
-	.col-lg-8 {
-		width: 66.66%;
-	}
-	.col-lg-9 {
-		width: 74.99%;
-	}
-	.col-lg-10 {
-		width: 83.33%;
-	}
-	.col-lg-11 {
-		width: 91.66%;
-	}
-	.col-lg-12 {
-		width: 100%;
-	}
+html {
+  background-color: #ffb3ff;
 }
-@media (min-width: 768) and (max-width: 991) {
-	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-		border: 1px solid black;
-	}
-	.col-md-1 {
-		width: 8.33%;
-	}
-	.col-md-2 {
-		width: 16.66%;
-	}
-	.col-md-3 {
-		width: 25%;
-	}
-	.col-md-4 {
-		width: 33%%;
-	}
-	.col-md-5 {
-		width: 41.66%;
-	}
-	.col-md-6 {
-		width: 50%;
-	}
-	.col-md-7 {
-		width: 58.33%;
-	}
-	.col-md-8 {
-		width: 66.66%;
-	}
-	.col-md-9 {
-		width: 74.99%;
-	}
-	.col-md-10 {
-		width: 83.33%;
-	}
-	.col-md-11 {
-		width: 91.66%;
-	}
-	.col-md-12 {
-		width: 100%;
-	}
+
+body {
+  font-family: "Truculenta", "Arial", sans-serif;
 }
-@media (max-width: 767) {
-	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-		border: 1px solid black;
-	}
-	.col-sm-1 {
-		width: 8.33%;
-	}
-	.col-sm-2 {
-		width: 16.66%;
-	}
-	.col-sm-3 {
-		width: 25%;
-	}
-	.col-sm-4 {
-		width: 33%%;
-	}
-	.col-sm-5 {
-		width: 41.66%;
-	}
-	.col-sm-6 {
-		width: 50%;
-	}
-	.col-sm-7 {
-		width: 58.33%;
-	}
-	.col-sm-8 {
-		width: 66.66%;
-	}
-	.col-sm-9 {
-		width: 74.99%;
-	}
-	.col-sm-10 {
-		width: 83.33%;
-	}
-	.col-sm-11 {
-		width: 91.66%;
-	}
-	.col-sm-12 {
-		width: 100%;
-	}
+
+h1 {
+  padding: 15px 0 15px 0;
+  text-align: center;
+  font-size: 1.75em;
+}
+
+.container {
+  width: 100%;
+  height: auto;
+}
+
+.box {
+  display: inline-block;
+  background: #ffffe6;
+  border: 1px solid black;
+  position: relative;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+p {
+  padding: 40px 10px 4px 10px;
+  text-align: justify;
+}
+
+h3 {
+  text-align: center;
+}
+
+.label {
+  border: 1px solid black;
+  font-size: 1.25em;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100px;
+}
+
+#label1 {
+  background: #73e600;
+}
+
+#label2 {
+  background: #ff0055;
+}
+
+#label3 {
+  background: #00bfff;
+}
+
+
+/* Desktop */
+
+@media (min-width: 992px) and (max-width: 2560px) {
+  .box {
+    width: 33.33%;
+  }
+}
+
+
+/* Tablet */
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div#box1.box {
+    width: 50%;
+  }
+  div#box2.box {
+    width: 50%;
+  }
+  div#box3.box {
+    width: 100%;
+  }
+}
+
+
+/* Mobile */
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .box {
+    width: 100%;
+  }
 }
