--- a/site/styles.css
+++ b/site/styles.css
@@ -43,16 +43,16 @@ h3 {
   width: 100px;
 }
 
-#title-1 {
+#sub-title-1 {
   background-color: pink;
 }
 
-#title-2 {
+#sub-title-2 {
   color: white;
   background-color: red;
 }
 
-#title-3 {
+#sub-title-3 {
   background-color: yellow;
 }
 
