--- a/site/styles.css
+++ b/site/styles.css
@@ -23,7 +23,8 @@
   border: 1px solid black;
   position: relative;
   height: auto;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  margin-right: 15px;
 }
 
 p {
@@ -36,7 +37,7 @@ h3 {
 }
 
 .label {
-  border: 1px solid black;
+  border: 3px solid black;
   font-size: 1.25em;
   position: absolute;
   top: 0;
