--- a/site/styles.css
+++ b/site/styles.css
@@ -23,7 +23,8 @@
   border: 1px solid black;
   position: relative;
   height: auto;
-  width: 75%;
+  width: auto;
+  margint: 10em;
   margin-bottom: 10px;
 }
 
