--- a/site/styles.css
+++ b/site/styles.css
@@ -1,4 +1,8 @@
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 .main-title {
   padding-top: 25px;
@@ -20,7 +24,7 @@
   position: relative;
   height: auto;
   width: auto;
-  margint: 10em;
+  margin: 10em;
   margin-bottom: 10px;
 }
 
