--- a/site/styles.css
+++ b/site/styles.css
@@ -15,10 +15,6 @@
   padding-left: 15px;
   padding-right: 15px;
   height: auto;
-  display: flex; 
-  flex-wrap: wrap;  
-  flex: 0 0 30%; 
-  justify-content:space-between;
 }
 
 .box {
@@ -27,7 +23,7 @@
   border: 1px solid black;
   position: relative;
   height: auto;
-  width: 30%;
+  column-gap: 10px;
   margin-bottom: 15px;
 }
 
