--- a/site/styles.css
+++ b/site/styles.css
@@ -12,6 +12,11 @@
 
 
 .container {
+  display: grid;
+  height: 100px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100px;
+  column-gap: 20px;
   padding-left: 15px;
   padding-right: 15px;
   height: auto;
