--- a/site/styles.css
+++ b/site/styles.css
@@ -19,7 +19,7 @@
   border: 2px solid black;
   position: relative;
   height: auto;
-  padding-left: 10px;
+  margin-left: 10px;
   margin-bottom: 15px;
 }
 
