--- a/site/styles.css
+++ b/site/styles.css
@@ -68,6 +68,14 @@ h3 {
   .box {
     width: 33.33%;
   }
+  
+  div#box1.box {
+    margin-right: 5px;
+  }
+  div#box2.box {
+    margin-right: 5px;
+  }
+  
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
